# libsais-rs

./: .editorconfig  .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
examples/: bwt32.rs  sais32.rs
sais-sys/: Cargo.toml  LICENSE  build.rs
sais-sys/src/: common.rs  errors.rs  lib.rs  sais16.rs  sais32.rs  sais64.rs
sais-sys/src/tests/: common.rs  mod.rs  sais16.rs  sais32.rs  sais64.rs
src/: aux_index.rs  common.rs  errors.rs  lib.rs  sais16.rs  sais32.rs  sais64.rs
src/tests/: aux_index.rs  common.rs  mod.rs  sais16.rs  sais32.rs  sais64.rs
