[package]
name = "sais"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "rust bindings to libsais"

[dependencies]
libc = "0.2"
sais-sys = { version = "0.1.0", path = "./sais-sys", default-features = false }

[dev-dependencies]
rand = "0.8"
num-traits = "0.2"
once_cell = "1.13"

[dev-dependencies.clap]
version = "3.2"
features = [ "derive" ]

[features]
default = [ "sais32", "parallel" ]
parallel = [ "sais-sys/openmp" ]
sais16 = [ "sais-sys/sais16" ]
sais32 = [ "sais-sys/sais32" ]
sais64 = [ "sais-sys/sais64" ]

[[example]]
name = "sais32"
required-features = [ "default" ]

[[example]]
name = "bwt32"
required-features = [ "default" ]
