[package]
name = "sais-sys"
version = "0.1.0+libsais-2.7.1"
edition = "2021"
license = "Apache-2.0"
description = "rust bindings to libsais"
categories = ["api-bindings", "algorithms"]
build = "build.rs"

[lib]
name = "sais_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[dev-dependencies]
lazy_static = "1.4"

[build-dependencies]
cc = "1.0"

[features]
default = [ "sais32", "openmp" ]
openmp = []
sais16 = []
sais32 = []
sais64 = []
