[package]
name = "sais-sys"
version = "0.1.0+libsais-2.7.1"
edition = "2021"
license = "Apache-2.0"
description = "rust bindings to libsais"
categories = ["api-bindings", "algorithms"]
build = "build.rs"

[lib]
name = "sais_sys"
path = "src/lib.rs"

[dependencies]
libc = "0.2"

[target.'cfg(not(target_env = "msvc"))'.dependencies.openmp-sys]
optional = true
version = "1.2"

[build-dependencies]
cc = "1.0"

[features]
default = [ "sais32", "openmp" ]
sais16 = []
sais32 = []
sais64 = []
openmp = [ "openmp-sys" ]
